# LinCLI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.zh-CN  Makefile  README.md  cli.ld  cli_project.ld  default.ld  mdk_cli.sct
.claude/: settings.local.json
Documentation/: architecture.md  async_commands.md  customization.md  init.md  inline_print.md  lincli_promo_article.md  option-macro-overloading.md  porting.md  setup.md  tests.md
cli/: CMakeLists.txt  Makefile
cli/Inc/: cli_auto_cmd.h  cli_candidate.h  cli_cmd_line.h  cli_io.h  cli_mpool.h  cli_var.h  cmd_dispose.h
cli/Src/: cli_candidate.c  cli_cmd_line.c  cli_disp_char.c  cli_io.c  cli_logo.c  cli_mpool.c  cli_var.c  cmd_dispose.c  temp.c
cli/stateM/: Makefile
cli/stateM/Inc/: rbtree.h  stateM.h
cli/stateM/Src/: main.c
example_project/LinCLI_1_0_stm32f103c8t6_keil5_mdk_examply_project/: LinCLI_1_0_stm32f103c8t6_keil5_mdk_examply_project.ioc  mdk_cli.sct
example_project/LinCLI_1_0_stm32f103c8t6_keil5_mdk_examply_project/Core/Inc/: main.h
example_project/LinCLI_1_0_stm32f103c8t6_keil5_mdk_examply_project/Core/Src/: main.c  stm32f1xx_it.c
example_project/LinCLI_1_0_stm32f103c8t6_keil5_mdk_examply_project/MDK-ARM/: LinCLI_1_0_stm32f103c8t6_keil5_mdk_examply_project.uvguix.gyh  LinCLI_1_0_stm32f103c8t6_keil5_mdk_examply_project.uvoptx  LinCLI_1_0_stm32f103c8t6_keil5_mdk_examply_project.uvprojx
include/: cli_config.h  cli_critical.h  cli_errno.h  cli_errno_common.h  cli_errno_dispose.h  cli_errno_io.h  cli_errno_statem.h  cli_io.h  cli_mpool.h  cli_var.h  init_d.h  rbtree.h  stateM.h  tVector.h
init/: CMakeLists.txt  Makefile  critical_default.c  init_d.c  main.c  memstat.c  port.c  pr_license.c  scheduler.c  section_markers.c
lib/: CMakeLists.txt  Makefile  cli_errno.c  cli_mpool.c  rbtree.c  stateM.c  state_test.c  tVector.c
report/: cli_cmd_dispose_development_report.md
tests/: CMakeLists.txt  test_auto_cmd.c  test_bool.c  test_buf_insufficient.c  test_callback.c  test_conflicts.c  test_double.c  test_init_d.c  test_int.c  test_int_array.c  test_key_interaction.c  test_led.c  test_log.c  test_motor.c  test_required.c  test_string.c  test_with_buf.c
